--- a/style.css
+++ b/style.css
@@ -57,19 +57,19 @@ main{
     
 }
 .result{
-    display: flex;
     margin-top: 20px;
-    margin-left: 37%;
+    margin-left: 35%;
     align-items: center;
     width: 400px;
-    height: 100px;
+    height: 50px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px black;
     background: #EBD476;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma;
     color: rgb(0, 0, 0);
+    font-size: 25px;
     text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
+    padding: 15px;
+ 
    
 }
