--- a/style.css
+++ b/style.css
@@ -31,12 +31,12 @@ header {
 }
 
 .jogador2 {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center ;
-        padding-top: 1%;
-        padding-bottom: 2%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center ;
+    padding-top: 1%;
+    padding-bottom: 2%;
         
 
 }
@@ -57,10 +57,11 @@ main{
     
 }
 .result{
-    margin-top: 20px;
-    margin-left: 35%;
+    margin: 20px auto;
+    justify-content: center;
     align-items: center;
     width: 400px;
+    display: flex;
     height: 50px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px black;
